# recruit-ai

./: ia-context.md
app/: .gitignore  (+5 more)
app-api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app-api/alembic/: env.py
app-api/alembic/versions/: 202502140001_initial.py
app-api/scripts/: seed_user.py
app-api/src/app/: dependencies.py  main.py
app-api/src/app/config/: settings.py
app-api/src/app/modules/auth/api/: routers.py  schemas.py
app-api/src/app/modules/auth/application/use_cases/: login_use_case.py  refresh_token_usecase.py
app-api/src/app/modules/auth/domain/entities/: user.py
app-api/src/app/modules/auth/domain/repositories/: user_repository.py
app-api/src/app/modules/auth/infrastructure/middleware/: auth_middleware.py
app-api/src/app/modules/auth/infrastructure/models/: user_model.py
app-api/src/app/modules/auth/infrastructure/repositories/: user_repository_impl.py
app-api/src/app/modules/candidates/api/: routers.py  schemas.py
app-api/src/app/modules/candidates/application/use_cases/: chat_candidates_usecase.py  create_candidate_usecase.py
app-api/src/app/modules/candidates/domain/entities/: candidate.py
app-api/src/app/modules/candidates/domain/repositories/: candidate_repository.py
app-api/src/app/modules/candidates/infrastructure/models/: candidate_model.py
app-api/src/app/shared/infrastructure/security/: jwt_service.py  passwords.py
app-api/src/app/tests/integration/: test_candidates_api.py
app-api/src/app/tests/unit/: test_create_candidate_usecase.py
(+49 files in other folders)
